# transient-compass

./: .gitignore  CMakeLists.txt  README.md  setup.py
Source/: CompassAnalysis.cpp  CompassAnalysis.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
examples/: demo.py
src/adaptive_transient_detector/: __init__.py  cli.py  config.py  detector.py  features.py
tests/: test_detector.py
